--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,13 @@
 
 
     <h1><%= title %></h1>
-    <p>Welcome to <%= message %></p>
+    <p>Welcome to my World</p>
+    <div class="mdl-card__media">
+        <img class="article-image" src=" images/vivek.jpg" border="0" alt="vivek" 
+        margin-left: auto;
+        margin-right: auto;
+        height: "50";>
+    </div>
   </body>
 
   <% include partials/footer %> 
