--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,19 @@
-<footer>
-        &copy;2018 | vivek Singh
-      </footer>
-    </html>
+<footer class="mdl-mini-footer">
     
+    <div class="mdl-mini-footer__right-section">
+        <ul class="mdl-mini-footer__link-list">
+            <li>
+                <a href="#">Help</a>
+            </li>
+            <li>
+                <a href="#">Privacy & Terms</a>
+            </li>
+        </ul>
+    </div>
+</footer>
+</main>
+</div>
+<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+</body>
+
+</html>
